# FinSight

./: .gitignore  Antigravity_Building MSME Health Card.md  DEPLOYMENT_QUICK_REFERENCE.md  DEPLOYMENT_SETUP.md  MSME_Financial_Health_Card_Spec.md  Makefile  Phase7.md  README.md  SECRETS_MANAGEMENT.md  Token Optimization.md  cloudbuild.yml  docker-compose.yml
.github/workflows/: deploy.yml
backend/: Dockerfile  Phase5.md  alembic.ini  create_schema.py  pyproject.toml  verify_schema.py
backend/alembic/: env.py
backend/app/: config.py  logging_config.py  main.py
backend/app/adapters/: __init__.py  base.py  exceptions.py  factory.py
backend/app/adapters/aws/: __init__.py  storage.py
backend/app/adapters/gcp/: __init__.py  firestore.py  pubsub.py  secrets.py  storage.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  consent.py  ecosystem.py  msme.py  portfolio.py  score.py
backend/app/db/: __init__.py  loader.py  models.py  session.py
backend/app/db/repositories/: __init__.py  alternate_data.py  base.py  health_score.py  msme.py
backend/app/ecosystem/: __init__.py  aa.py  ocen.py  uli.py
backend/app/models/: schemas.py
backend/app/scoring/: __init__.py  config_loader.py  engine.py  ml_scorer.py  types.py
backend/app/scoring/dimensions/: __init__.py  compliance_formalization.py  credit_behavior.py  digital_adoption.py  operational_footprint.py  resilience_volatility.py  revenue_cashflow.py  workforce_stability.py
backend/app/scoring/models/: isolation_forest.joblib  xgb_model.joblib
backend/app/synthetic/: __init__.py  generator.py
backend/app/synthetic/personas/: annapurna_fresh.yaml  artisan_textiles.yaml  chai_express_logistics.yaml  elite_motors.yaml  golden_harvest_dairy.yaml  sakhi_mahila.yaml  techmart_solutions.yaml
backend/config/: scoring_weights.yaml
backend/msme_healthcard_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: init_db.sql  seed_db.py  train_ml_model.py
backend/tests/: conftest.py  test_adapters.py  test_api.py  test_ml_scoring.py  test_repositories.py  test_scoring.py  test_synthetic.py
data/synthetic/: bank_statement_summaries.csv  bank_statement_summaries.parquet  bureau_records.csv  bureau_records.parquet  digital_footprints.csv  digital_footprints.parquet  epfo_records.csv  epfo_records.parquet  gst_returns.csv  gst_returns.parquet  msme.csv  msme.parquet  upi_transaction_summaries.csv  upi_transaction_summaries.parquet  utility_consumption.csv  utility_consumption.parquet
docs/: ARCHITECTURE.md  video_script.md
docs/ADR/: ADR-001-adapter-interface-pattern.md  ADR-002-rule-engine-before-ml.md
frontend/: Dockerfile  Phase 6.md  docker-entrypoint.sh  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  env.d.ts  index.css  main.tsx
frontend/src/api/: auth.ts  client.ts  ecosystem.ts  msme.ts  portfolio.ts
frontend/src/components/: ErrorBoundary.tsx  Layout.tsx  LoadingSpinner.tsx  ProtectedRoute.tsx  TierBadge.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: DashboardPage.tsx  DataSourcePage.tsx  EcosystemPage.tsx  HealthCardPage.tsx  LoginPage.tsx
frontend/src/test/: App.test.tsx  Dashboard.test.tsx  HealthCard.test.tsx
frontend/tests/e2e/: happy_path.spec.ts
infra/terraform/: main.tf  outputs.tf  variables.tf
infra/terraform/environments/dev/: main.tf
infra/terraform/modules/cloud_run/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/cloud_sql/: main.tf
infra/terraform/modules/network/: main.tf
infra/terraform/modules/pubsub/: main.tf
scripts/: setup-cloud-build.bat  setup-cloud-build.sh
(+2 files in other folders)
