[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msme-healthcard-backend"
version = "0.1.0"
description = "MSME Financial Health Card — Backend API Service"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",

    # Data validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",

    # Database
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",         # Async Postgres driver
    "alembic>=1.13.0",          # DB migrations

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # HTTP client (for ecosystem connectors)
    "httpx>=0.27.0",

    # Cloud SDKs (GCP — Stage 1)
    "google-cloud-storage>=2.16.0",
    "google-cloud-secret-manager>=2.20.0",
    "google-cloud-pubsub>=2.21.0",
    "google-cloud-firestore>=2.16.0",

    # Data processing (vectorized — no per-row loops)
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=16.0.0",          # Parquet support

    # ML & Explainability (Phase 4 — packages installed now to avoid dep conflicts)
    "xgboost>=2.0.0",
    "scikit-learn>=1.5.0",
    "shap>=0.45.0",

    # Config
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",

    # Utilities
    "python-dateutil>=2.9.0",
    "structlog>=24.1.0",        # Structured JSON logging
    "python-multipart>=0.0.9",  # Form data support

    # Rate limiting
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",            # TestClient transport
    "pytest-mock>=3.14.0",

    # Linting & formatting
    "black>=24.4.0",
    "ruff>=0.4.4",
    "mypy>=1.10.0",

    # Type stubs
    "types-PyYAML>=6.0.0",
    "types-python-dateutil>=2.9.0",
    "sqlalchemy[mypy]>=2.0.30",

    # Security scanning
    "bandit>=1.7.8",
    "pip-audit>=2.7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# ==============================================================
# Tool configurations
# ==============================================================

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "S",    # flake8-bandit (security)
    "N",    # pep8-naming
    "ANN",  # flake8-annotations (type hints)
]
ignore = [
    "ANN101",  # Missing type annotation for self
    "ANN102",  # Missing type annotation for cls
    "S101",    # Use of assert (OK in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN"]  # Relax for test files
"app/adapters/**/*.py" = ["ANN"]    # Relax for adapter stubs

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = [
    "xgboost.*",
    "shap.*",
    "sklearn.*",
    "google.cloud.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning:sqlalchemy",
]
